Fix overflow

--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body{
     margin:0;
+    overflow-x: hidden;
 }
 nav{
     display: flex;
@@ -10,11 +11,11 @@ nav{
     width: 100vw;
    align-items: center;
    height: 10vh; 
-   
+    
 }
 #nav{
 display: flex;
-width: 100vw;
+width: 91vw;
 height: 50px;
 padding-left: 9%;
 align-items: center;
